# nta_eval_svc

./: Makefile  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: c21b64aab431_create_evaluation_criteria_and_job_.py
src/nta_eval_svc/: app.py  config.py  main.py  middleware.py
src/nta_eval_svc/core/: __init__.py  database.py
src/nta_eval_svc/models/: __init__.py  base.py  evaluation.py
src/nta_eval_svc/routers/: __init__.py  long_polling_api.py  tasks_api.py
src/nta_eval_svc/services/: openai_service.py  polling_service.py
src/nta_eval_svc/workers/: __init__.py  celery_app.py  tasks.py
tests/: conftest.py  test_celery_redis_config.py  test_config_long_polling.py  test_database.py  test_long_polling_api_setup.py  test_models.py  test_openai_config.py  test_openai_service.py  test_task_dispatch_integration.py  test_workers_tasks.py
tests/integration/: test_long_polling_integration.py
tests/unit/: test_long_polling_service.py  test_rate_limiting_middleware.py
